#350+354 - Fix long word overflow (#367)
* fix(terms): oneLongWordWithoutSpaces overflow

* fix(submit): oneLongWordWithoutSpaces overflow

--- a/src/wizards/tokenSwapDealWizard/stages/termsStage/termsStage.scss
+++ b/src/wizards/tokenSwapDealWizard/stages/termsStage/termsStage.scss
@@ -1,4 +1,7 @@
-.stageSectionContent {
+.termsStageSectionContent {
+  max-width: 645px;
+  word-wrap: break-word;
+
   editing-card {
     pcard {
       margin-bottom: 32px;
